--- a/package.json
+++ b/package.json
@@ -4,18 +4,29 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
+    "currency.js": "^2.0.4",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-confirm-alert": "^3.0.6",
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
+    "react-hot-toast": "^2.3.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^5.3.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "sass": "^1.56.2",
     "vite": "^4.0.0"
   }
 }
